updating schema and pages
